--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -49,6 +49,12 @@
     font-weight: 500;
     text-align: center;
   }
+  .wrapper textarea{
+    width: 100%;
+    height: 100%;
+    border: 0;
+    resize: none;
+  }
   .wrapper form{
     margin: 35px 0 20px;
   }
