--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -49,7 +49,7 @@
     font-weight: 500;
     text-align: center;
   }
-  .wrapper textarea{
+  .wrapper textArea{
     width: 100%;
     height: 100%;
     border: 0;
