--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -26,5 +26,52 @@
     content: "";
     display: table;
     clear: both;
-}
+  }
 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+  .wrapper{
+    width: 370px;
+    height: 400px;
+    float: center;
+    padding: 5px 7px;
+    border-radius: 7px;
+    background: #fff;
+    box-shadow: 7px 7px 20px rgba(0,0,0,0.05);
+  }
+  .wrapper header{
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .wrapper textarea{
+    width: 100%;
+    height: 390px;
+    border: 0;
+    resize: none;
+  }
+  .wrapper form{
+    margin: 35px 0 20px;
+  }
+  form .row{
+    display: flex;
+    margin-bottom: 20px;
+    flex-direction: column;
+  }
+  .wrapper header{
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .wrapper form{
+    margin: 35px 0 20px;
+  }
+  
+  .bolded { 
+    font-weight: bold;
+ }
