--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -12,13 +12,13 @@
 
 .left {
     width: 50%;
-    background-color: #BECEC7;
+    background-color: #EAF1EF;
     height: 100vh;
 }
 
 .right {
     width: 50%;
-    background-color: #5A726B;
+    background-color: #BECEC7;
     height: 100vh;
 }
 
@@ -42,7 +42,8 @@
     padding: 5px 7px;
     border-radius: 7px;
     background: #fff;
-    box-shadow: 7px 7px 20px rgba(0,0,0,0.05);
+    
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.2);
   }
   .wrapper header{
     font-size: 28px;
@@ -50,21 +51,10 @@
     text-align: center;
   }
   .wrapper textarea{
-    width: 100%;
+    width: 350px;
     height: 390px;
     border: 0;
     resize: none;
-  }
-  #printed {
-    width: 350px; /* set the width of the container to a fixed size */
-    height: 390px; /* set the height of the container to a fixed size */
-    text-align: justify;
-    overflow: auto; /* hide any content that overflows the container */
-  }
-  
-  #text {
-    white-space: pre-wrap; /* allow line breaks to occur within the text */
-    word-wrap: break-word; /* break words that are too long to fit on one line */
   }
   .wrapper form{
     margin: 35px 0 20px;
@@ -85,4 +75,29 @@
   
   .bolded { 
     font-weight: bold;
+    font-size: 18px;
+ }
+
+ #printed {
+    width: 350px; /* set the width of the container to a fixed size */
+    height: 390px; /* set the height of the container to a fixed size */
+    text-align: justify;
+    overflow: auto; /* hide any content that overflows the container */
+  }
+  
+  #text {
+    white-space: pre-wrap; /* allow line breaks to occur within the text */
+    word-wrap: break-word; /* break words that are too long to fit on one line */
+  }
+
+ .btn { 
+    font-weight: bold;
+    background-color: #5A726B;
+    border: #5A726B;
+    border-radius: 8px;
+    color: white; 
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.2);
+
+    padding: 5px 20px;
+    cursor: pointer;
  }
