--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -102,3 +102,15 @@
     padding: 5px 20px;
     cursor: pointer;
  }
+
+ .bttn {
+  font-weight: bold;
+    background-color: #84baaa;
+    border: #5A726B;
+    border-radius: 8px;
+    color: white; 
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.2);
+
+    padding: 5px 20px;
+    cursor: pointer;
+ }
