--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -114,3 +114,9 @@
     padding: 5px 20px;
     cursor: pointer;
  }
+
+ .listening { 
+  color: #002145;
+  font-weight: bold;
+  font-size: 18px;
+}
