--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -13,13 +13,13 @@
 .left {
     width: 50%;
     background-color: #EAF1EF;
-    height: 100vh;
+    height: 110vh;
 }
 
 .right {
     width: 50%;
     background-color: #BECEC7;
-    height: 100vh;
+    height: 110vh;
 }
 
 .row:after {
@@ -118,5 +118,20 @@
  .listening { 
   color: #002145;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 15px;
 }
+
+#logo {
+    float:left;
+    position: relative;
+    top:-10px;
+    width: 100px;
+    height: 50px;} 
+
+#image {
+    position: relative;
+    position: absolute;
+    left:470px;
+    top:400px;
+    width: 300px;
+    height: 225px;}
